--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\DrawContext.cpp" />
     <ClCompile Include="src\ModelAsset.cpp" />
+    <ClCompile Include="src\RawBuffer.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Image.cpp" />
     <ClCompile Include="src\App.cpp" />
@@ -278,6 +279,7 @@
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\RawBuffer.h" />
     <ClInclude Include="src\Image.h" />
     <ClInclude Include="src\App.h" />
     <ClInclude Include="src\BaseBufferData.h" />
