--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -9,13 +9,13 @@ Size=550,680
 Collapsed=0
 
 [Window][Simulation Speed]
-Pos=972,12
-Size=297,88
-Collapsed=0
+Pos=957,359
+Size=298,75
+Collapsed=1
 
 [Window][Camera]
-Pos=13,31
-Size=282,245
+Pos=4,7
+Size=263,226
 Collapsed=0
 
 [Window][Light]
@@ -29,7 +29,7 @@ Size=369,411
 Collapsed=1
 
 [Window][Light0]
-Pos=964,397
+Pos=952,387
 Size=303,286
 Collapsed=0
 
@@ -276,5 +276,10 @@ Collapsed=0
 [Window][Light49]
 Pos=60,60
 Size=131,226
+Collapsed=0
+
+[Window][Renderer]
+Pos=905,6
+Size=370,234
 Collapsed=0
 
