More cleanup and better presentation

--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -279,7 +279,12 @@ Size=131,226
 Collapsed=0
 
 [Window][Renderer]
-Pos=905,6
-Size=370,234
+Pos=928,6
+Size=347,234
 Collapsed=0
+
+[Table][0xDF3F0A36,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
