--- a/GFXCore/GFXCore.vcxproj.filters
+++ b/GFXCore/GFXCore.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="src\CorePch.h">
       <Filter>Precompiled</Filter>
     </ClInclude>
+    <ClInclude Include="src\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MouseEvent.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CorePch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
